# DwarvenFramework

./: CMakeLists.txt  README.md
DwarfConstructorRender/: CMakeLists.txt  README.md
DwarfConstructorRender/Include/DwarfConstructorRender/: DataBuffer.h  GlobalObjects.h  Material.h  ParamSet.h  ParamSetDeclarator.h  ParamSetDefinition.h  ParamSetDefinition.inl  PipelineDescriptor.h  RenderObjectStream.h  RenderTarget.h  RenderViewRegistry.inl  Renderer.h  VertexAttributeRegistry.h
DwarfConstructorRender/Source/: AttachmentDefinition.h  CommandBuffer.h  DataBufferRegistry.cpp  DepthState.cpp  DescriptorSetDefinitions.cpp  FrameData.h  Framebuffer.h  GraphicsPipeline.h  Mesh.cpp  ParamSet.cpp  ParamSetDeclarator.cpp  ParamSetDefinition.cpp  RenderCore.h  RenderPass.cpp  RenderPassInstance.cpp  RenderTarget.cpp  RenderTargetRegistry.cpp  Renderer.cpp  ShaderModule.h  ShaderParameter.cpp  Texture.h  VertexAttributeRegistry.cpp  VertexDescription.cpp
DwarfConstructorRender/Source/Loaders/: CommandLine.cpp  MaterialScriptLoader.cpp  ShaderCompiler.cpp  ShaderIncludeLoader.cpp
DwarfConstructorRender/Source/Resources/: MaterialRuleResource.cpp  ShaderResource.cpp
DwarfConstructorRender/Source/ShaderGraph/: Expression.cpp  FragmentShaderGenerator.cpp  GraphicsPipelineGenerator.cpp  Node.cpp  ShaderGenerator.cpp  ShaderGraph.cpp  Types.cpp
DwarfConstructorRender/Source/Vulkan/: VkAPI.cpp  VkDefinitions.h  VkFrameData.cpp  VkInit.cpp  VkPresentation.h  VkRenderCore.h  VkScopedRenderEvent.h  VkShaderModule.h  VkTransferBuffer.cpp  VkVertexDescription.cpp
DwarfInput/: CMakeLists.txt  README.md
DwarfInput/Include/DwarfInput/: GamepadInputDevice.h  GamepadManager.h  GamepadRedirectionSettings.h  Input.h  InputDevice.h  InputSettings.h  KeyMapper.h  Keymaps.h  StandardInputDevice.h
DwarfInput/Source/: GamepadInputDevice.cpp  GamepadManager.cpp  GamepadRedirectionSettings.cpp  Input.cpp  InputDevice.cpp  InputSettings.cpp  KeyMapper.cpp  StandardInputDevice.cpp
DwarfModResources/: CMakeLists.txt
DwarfModResources/Include/DwarfResources/: IFileSystem.h  Resource.h  Resource.inl  ResourceLoader.h
DwarfModResources/Source/: ResourceManager.cpp
DwarfModResources/Tests/: CMakeLists.txt
DwarfPlatform/: CMakeLists.txt  README.md
DwarfPlatform/Include/DwarfPlatform/: Platform.h
DwarfPlatform/Source/: Platform.cpp  Window.cpp
DwarfRender/: CMakeLists.txt  README.md
DwarfRender/Include/DwarfRender/: BlendState.h  Buffer.h  CommandBuffer.h  DataBuffer.h  DataBufferRegistry.h  DepthState.h  GlobalObjects.h  GraphicsPipeline.h  Material.h  MaterialRule.h  Mesh.h  ModelStream.h  ParamList.h  ParamSet.h  ParamSet.inl  ParamSetDeclarator.h  ParamSetDefinition.h  ParamSetDefinitionManager.h  ParameterSet.h  Pipeline.h  PipelineDescriptor.h  PrimitiveTopology.h  RasterizationState.h  Render.h  RenderObjectStream.h  RenderPass.h  RenderPassRegistry.h  RenderPassRegistry.inl  RenderTarget.h  RenderTargetRegistry.h  RenderView.h  RenderViewRegistry.h  Renderer.h  Renderer.inl  SamplerState.h  ShaderParameter.h  SnippetProvider.h  Texture.h  Types.h  VertexAttribute.h  (+2 more)
DwarfRender/Source/: AttachmentDefinition.h  BlendState.cpp  Buffer.h  CommandBuffer.h  DataBuffer.cpp  DataBufferRegistry.cpp  DepthState.cpp  Descriptor.h  DescriptorSet.h  DescriptorSetDefinitions.h  GlobalObjects.cpp  GraphicsPipeline.h  Mesh.cpp  Mesh.h  ModelStream.cpp  ParamSet.cpp  ParamSetDeclarator.cpp  ParamSetDefinition.cpp  ParamSetDefinitionManager.cpp  Pass.h  Pipeline.h  PipelineLayout.h  RasterizationState.cpp  Render.cpp  RenderCore.h  RenderObjectStream.cpp  RenderPass.cpp  RenderPassInstance.cpp  RenderPassInstance.h  RenderPassRegistry.cpp  RenderTarget.cpp  RenderTargetRegistry.cpp  RenderView.cpp  RenderViewRegistry.cpp  Renderer.cpp  Sampler.h  ShaderModule.h  ShaderParameter.cpp  Texture.h  VertexAttribute.cpp  (+2 more)
DwarfRender/Source/Loaders/: CommandLine.cpp  MaterialRuleScriptLoader.cpp  MaterialScriptLoader.cpp  MeshLoader.cpp  PipelineCodeLoader.cpp  ShaderCodeLoader.cpp  ShaderCompiler.cpp  ShaderFileIncluder.cpp  ShaderFileIncluder.h  ShaderIncludeLoader.cpp
DwarfRender/Source/Resources/: MaterialRuleResource.cpp  ShaderIncludeResource.cpp  ShaderResource.cpp
DwarfRender/Source/ShaderGraph/: Expression.cpp  FragmentShaderGenerator.cpp  GraphicsPipelineGenerator.cpp  Node.cpp  PipelineGenerator.cpp  ShaderGenerator.cpp  ShaderGraph.cpp  Types.cpp  Variable.cpp  VertexShaderGenerator.cpp
DwarfRender/Source/Vulkan/: VkAPI.cpp  VkAPI.h  VkBuffer.cpp  VkBuffer.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkDefinitions.h  VkDescriptorSet.cpp  VkDescriptorSet.h  VkFrameData.h  VkGraphicsPipeline.cpp  VkGraphicsPipeline.h  VkHelper.cpp  VkInit.h  VkMesh.cpp  VkMesh.h  VkObjectManager.cpp  VkObjectManager.h  VkParameterSet.cpp  VkParameterSet.h  VkParameterSetDefinition.cpp  VkParameterSetDefinition.h  VkParameterSetDefinition.inl  VkPipeline.cpp  VkPipeline.h  VkPresentation.cpp  VkPresentation.h  VkPresentationPipeline.cpp  VkPresentationPipeline.h  VkRenderContext.h  VkRenderCore.cpp  VkRenderCore.h  VkRenderPass.cpp  VkRenderPass.h  VkRenderer.cpp  VkRenderer.h  VkSampler.cpp  VkSampler.h  VkScopedRenderEvent.cpp  VkScopedRenderEvent.h  (+17 more)
DwarfResources/: CMakeLists.txt  README.md
DwarfResources/Include/DwarfResources/: Data.h  DefaultFileSystem.h  IFile.h  IFileSystem.h  Resource.h  Resource.inl  ResourceLoader.h  ResourceLoader.inl  ResourceLoadingTask.h  ResourceManager.h  ResourceManager.inl  ResourceTypeManager.h  ResourceTypeManager.inl
DwarfResources/Source/: Data.cpp  DefaultFileSystem.cpp  DefaultWriteAccessFile.cpp  Resource.cpp  ResourceLoadingTask.cpp  ResourceManager.cpp
DwarfResources/Tests/: CMakeLists.txt
DwarfResources/Tests/Tests/: Loading.cpp
DwarfWindow/: CMakeLists.txt  README.md
DwarfWindow/Source/: Window.cpp  WindowManager.cpp
DwarvenCore/: CMakeLists.txt  README.md
DwarvenCore/Source/: DataVisitor.cpp  DebugName.cpp  Log.cpp  Memory.cpp  SpinLock.cpp
DwarvenCore/Tests/: CMakeLists.txt
DwarvenProcedural/DwarfMarchingCubes/: CMakeLists.txt
(+305 files in other folders)
